# YHack-2026

./: .env.example  .gitignore  README.md  package copy.json  package-lock copy.json  package-lock.json  package.json  pyproject.toml  run.sh
app copy/: globals.css  layout.tsx  page.tsx
backend/: .env.example  package-lock.json  package.json  requirements.txt  server.js
backend/app/: main.py  models.py
backend/app/routes/: estimate.py  parse.py  recommend.py  simulate.py
backend/app/services/: energy.py  gemini.py  lava.py  recommender.py
backend/routes/: estimate.js  parseBill.js  parseHome.js  recommend.js
components copy/: Dashboard.tsx  EnergyChart.tsx  WhatIfSimulator.tsx
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.js  page.js
frontend/app/onboarding/: page.js
frontend/app/results/: page.js
frontend/app/simulator/: page.js
frontend/components/: Navbar.js
frontend/lib/: api.js
lib copy/: calculations.ts  data.ts  types.ts
node_modules copy/: .package-lock.json
scripts/: seed_demo_history.py  seed_streak_mongo.py  seed_streak_mongodb.py
src/wattsup/: agent_zero_tools.py  chat_agent.py  config.py  db.py  demo_hardware.py  main.py  models.py  orchestrator.py  plain_text.py  quant.py  server.py  slack_agent_bridge.py  slack_socket.py  slack_util.py  streak_notify.py  streak_triggers.py  streaks.py  wattwise_streak.py  worker.py
web/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json  supabase-migration-v2.sql  supabase-migration.sql
(+66 files in other folders)
