[project]
name = "wattsup"
version = "0.1.0"
description = "Eco-quant energy orchestration: ComEd pricing, PJM fuel mix, MongoDB logs, agent-style tools."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "gridstatus>=0.11.0",
    "gridstatusio>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pymongo>=4.6.0",
    "slack-bolt>=1.18.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
wattsup-poll = "wattsup.main:main"
wattsup-worker = "wattsup.worker:main"
wattsup-serve = "wattsup.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wattsup"]

[tool.ruff]
line-length = 100
target-version = "py311"
